--- a/new-main/pricing.html
+++ b/new-main/pricing.html
@@ -94,7 +94,7 @@
 							<li><i class="icon-ok"></i> Diagnóstico inicial + plano de estudo</li>
 							<li><i class="icon-ok"></i> Técnicas de Reading & Listening</li>
 							<li><i class="icon-ok"></i> Writing com correção detalhada</li>
-							<li><i class="icon-ok"></i> Speaking com simulações cronometradas</li>
+							<li><i class="icon-ok"></i> Speaking com simulações</li>
 							<li><i class="icon-ok"></i> Relatório de progresso semanal</li>
 						</ul>
 					</div>
@@ -137,7 +137,7 @@
     </div>
     <div class="pricing-container">
       <ul>
-        <li><i class="icon-ok"></i> Análise de presença online (site/redes)</li>
+        <li><i class="icon-ok"></i> Análise de presença online</li>
         <li><i class="icon-ok"></i> Identificação de pontos fortes e fracos</li>
         <li><i class="icon-ok"></i> Sugestões de melhorias imediatas</li>
         <li><i class="icon-ok"></i> Estratégias práticas de baixo custo</li>
