--- a/new-main/contact.html
+++ b/new-main/contact.html
@@ -152,7 +152,7 @@
           <i class="fa fa-envelope"></i> <a href="mailto:rafaelsilva1823@gmail.com">rafaelsilva1823@gmail.com</a><br>
         </p>
         <p style="margin-top:12px;">
-          <i class="fa fa-clock-o"></i> Seg–Sex: 9h–20h &nbsp;|&nbsp; Sáb: 9h–13h<br>
+          <i class="fa fa-clock-o"></i> Seg–Sex: 9h–20h &nbsp;|&nbsp; Sábado: 9h–13h<br>
           <i class="fa fa-globe"></i> Aulas online e presenciais
         </p>
       </div>
